[project]
name="fastmhn"
authors = [
    {name="Simon Pfahler", email="simon.pfahler@ur.de"}
]
description = "Fast inference of MHN models"
requires-python=">=3.4"
readme="README.md"
dependencies=['numpy', 'mhn']

version="0.0.1"

[project.urls]
repository="https://phygit.ur.de/physics/mhn/fastmhn"
homepage="https://phygit.ur.de/physics/mhn/fastmhn"

[build-system]
requires = ["meson-python", "ninja"]
build-backend = 'mesonpy'
